--- a/proxy.config
+++ b/proxy.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
 	| ArcGIS for Canadian Municipalities / ArcGIS pour les municipalités canadiennes
-	| My Municipal Government Services v10.2.0 / Mes services municipaux v10.2.0
+	| My Municipal Government Services v10.2.0.1 / Mes services municipaux v10.2.0.1
 	| This file was modified by Esri Canada - Copyright 2013 Esri Canada
 	|
 	|
@@ -28,7 +28,7 @@
             dynamicToken = if true, gets token dynamically with username and
                 password stored in web.config file's appSettings section.
         -->
-        <serverUrl matchAll="true" url="http://yourserver/arcgis/"></serverUrl>
+        <serverUrl matchAll="true" url="http://172.31.12.22:6080/arcgis/"></serverUrl>
 		<serverUrl matchAll="true" url="http://www.arcgis.com/sharing/generateToken"></serverUrl>
 		<serverUrl matchAll="true" url="https://www.arcgis.com/sharing/generateToken"></serverUrl>
     </serverUrls>
