--- a/web.config
+++ b/web.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0"?>
 <!-- 
  | ArcGIS for Canadian Municipalities / ArcGIS pour les municipalités canadiennes
- | My Municipal Government Services v10.2.0 / Mes services municipaux v10.2.0
+ | My Municipal Government Services v10.2.0.1 / Mes services municipaux v10.2.0.1
  | This file was created by Esri Canada - Copyright 2013 Esri Canada
  |
  |
@@ -23,7 +23,7 @@
   <!--********USER SETTINGS***************************************************************-->
     <add key="permitted_referer" value=""/>
     <!--OAuth Credentials - Client ID, Client Secret-->
-    <add key="" value=""/>
+    <add key="rel3FAt2210ktCVf" value="9e57172a108b4246820037f10cadd28e"/>
   <!--************************************************************************************-->
 	
   </appSettings>
